colcon_ws/log/build_2022-09-10_07-04-56/dasc_robot/stdout_stderr.log
[ 11%] Built target dascBots
[35m[1mScanning dependencies of target trajectory_follower[0m
[ 77%] Built target joystick_controller
[ 77%] Built target example_control_geometric
[ 77%] Built target example_control_geometric_acceleration
[ 77%] Built target example_control
[ 77%] Built target example_control_multi_rover
[ 77%] Built target example_control_geometric_velocity
[ 88%] Built target dasc_robot_lib
[ 94%] [32mBuilding CXX object CMakeFiles/trajectory_follower.dir/src/trajectory_follower.cpp.o[0m
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp: In member function ‘void TrajectoryFollower::set_takeoff_traj()’:
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:87:43: error: ‘using SharedPtr = class std::shared_ptr<rclcpp::Clock>’ {aka ‘class std::shared_ptr<rclcpp::Clock>’} has no member named ‘now’
   87 |     traj.header.stamp = this->get_clock().now();
      |                                           ^~~
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp: In member function ‘void TrajectoryFollower::traj_callback(dasc_msgs::msg::QuadTrajectory_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:117:54: warning: unused parameter ‘msg’ [-Wunused-parameter]
  117 |   void traj_callback(const QuadTrajectory::SharedPtr msg){
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp: In member function ‘void TrajectoryFollower::timer_callback()’:
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:131:47: error: conversion from ‘rclcpp::Duration’ to non-scalar type ‘std::chrono::duration<double>’ requested
  131 |     std::chrono::duration<double> dur = (now_ - traj.header.stamp);
      |                                         ~~~~~~^~~~~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/trajectory_follower.dir/build.make:63: CMakeFiles/trajectory_follower.dir/src/trajectory_follower.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:94: CMakeFiles/trajectory_follower.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
